--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^3.11.0",
     "react-scripts": "3.4.4",
     "styled-components": "^5.2.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/yup": "^0.29.8",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "eslint": "6.8.0",
