--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,8 @@
         "react-hooks/exhaustive-deps": "warn",
         "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
         "import/prefer-default-export": "off",
+        "react/jsx-one-expression-per-line": "off",
+        "no-unused-expressions": "off",
         "react/jsx-props-no-spreading": "off",
         "react/prop-types": "off",
         "import/extensions": [
