--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.0",
     "react-icons": "^3.11.0",
     "react-scripts": "3.4.4",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.2.0",
     "typescript": "~3.7.2",
     "uuidv4": "^6.2.5",
